--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
   font-weight: normal;
   text-align: center;
   margin: 0 0 20px 0;
-  background: url(dimension.png);
+  background-color: #F5F5F5;
 }
 
 #project {
@@ -55,7 +55,7 @@ h1 {
   color: #5D6975;
   text-align: right;
   width: 52px;
-  margin-right: 10px;
+  margin-right: 20px;
   display: inline-block;
   font-size: 0.8em;
 }
